--- a/AsyncTaskDemo/app/build.gradle
+++ b/AsyncTaskDemo/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "edu.wallawalla.cs.sukaki.drawit"
+        applicationId "com.zybooks.asynctaskdemo"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
@@ -33,7 +33,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
