--- a/Drawit3/app/build.gradle
+++ b/Drawit3/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation ‘com.github.duanhong169:colorpicker:1.1.6’
+    implementation 'com.github.duanhong169:colorpicker:1.1.6'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
