--- a/Drawit3/app/src/main/AndroidManifest.xml
+++ b/Drawit3/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Drawit3">
+        android:theme="@style/Theme.Drawit3"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".DrawActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -18,5 +19,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
 </manifest>
